# gnome-control-center

./: configure.ac  meson.build
panels/: meson.build
panels/background/: meson.build
panels/bluetooth/: meson.build
panels/color/: meson.build
panels/common/: meson.build
panels/datetime/: meson.build
panels/display/: meson.build
panels/info/: meson.build
panels/keyboard/: meson.build
panels/mouse/: meson.build
panels/network/: meson.build
panels/network/wireless-security/: meson.build
panels/notifications/: meson.build
panels/online-accounts/: meson.build
panels/power/: meson.build
panels/printers/: meson.build
panels/privacy/: Makefile.am  cc-privacy-panel.c  meson.build  privacy.ui
panels/region/: meson.build
panels/search/: cc-search-panel.c  meson.build  search.ui
panels/sharing/: meson.build
panels/sound/: meson.build
panels/sound/data/: meson.build
panels/universal-access/: meson.build
panels/user-accounts/: meson.build  um-realm-generated.c  um-realm-generated.h
panels/wacom/: meson.build
panels/wacom/calibrator/: meson.build
po/: POTFILES.skip
search-provider/: meson.build
shell/: Makefile.am  meson.build
shell/alt/: Makefile.am  meson.build
shell/completions/: meson.build
